--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ body {
     display: grid;
     place-items:center;
     width: 250px;
-    margin-left: 20px;
+    margin-left: 250px;
     margin-top: 20px;
-    float: left;
+    float: center;
 }
 
 .galeria > img {
@@ -127,9 +127,8 @@ h1 {
 .container {
     width: 400px;
     float: right;
-    margin-top: 10px;
-    margin-left: 20px;
-float:right;
+    margin-top: 100px;
+    margin-left: 250px;
 
 }
 
